--- a/digital-workspace.html
+++ b/digital-workspace.html
@@ -239,6 +239,20 @@
             margin-bottom: 3rem;
         }
     }
+    .page-node-type-solution div[role=main] .btn-cta-button.primary:after {
+        font-size: 16px;
+        padding-left: 4px;
+        vertical-align: -1px;
+        font-size: 16px;
+        line-height: 24px;
+        content: "\00A0 >";
+        /* padding-left: 0; */
+        font-family: inherit !important;
+        top: 0;
+        display: inline-block;
+        width: 24px;
+        position: relative;
+    }
     .block-item-bg {
         background-position: center center;
         background-repeat: no-repeat;
