--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <link rel="image_src" href="https://techtoday.lenovo.com/origind8/themes/custom/lenovod8/lenovo-logo-red.png" />
     <meta name="referrer" content="unsafe-url" />
     <meta name="rights" content="© Lenovo. All rights reserved." />
-    <meta property="og:site_name" content="Lenovo Tech Today Indonesia" />
+    <meta property="og:site_name" content="Lenovo Microsite" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://techtoday.lenovo.com/id/in/solutions" />
-    <meta property="og:title" content="Lenovo Tech Today for SMB &amp; Large Enterprise | Lenovo Tech Today Indonesia" />
+    <meta property="og:title" content="Lenovo Microsite" />
     <meta property="og:description" content="Lenovo helps small, medium, large, &amp; enterprise-sized businesses &amp; data centers: we&#039;re bringing intelligent digital transformation to the global business community." />
     <meta property="og:image" content="https://techtoday.lenovo.com/origind8/themes/custom/lenovod8/lenovo-logo-red.png" />
     <meta property="og:image:type" content="image/png" />
@@ -31,7 +31,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:description" content="Lenovo helps small, medium, large, &amp; enterprise-sized businesses &amp; data centers: we&#039;re bringing intelligent digital transformation to the global business community." />
     <meta name="twitter:site" content="@Lenovo" />
-    <meta name="twitter:title" content="Lenovo Tech Today for SMB &amp; Large Enterprise | Lenovo Tech Today Indonesia" />
+    <meta name="twitter:title" content="Lenovo Microsite" />
     <meta name="twitter:site:id" content="17307429" />
     <meta name="twitter:url" content="https://techtoday.lenovo.com/id/in/solutions" />
     <meta name="twitter:image" content="https://techtoday.lenovo.com/origind8/themes/custom/lenovod8/lenovo-logo-red.png" />
@@ -76,8 +76,8 @@
 <meta name="siteRoot" content="https://techtoday.lenovo.com/id/in/solutions" />
 <meta name="pagePath" content="https://techtoday.lenovo.com/id/in/solutions" />
 <meta name="pageBreadcrumb" content="Lenovo Tech Today" />
-<meta name="pageName" content="Teknologi Terkini Lenovo | Lenovo Tech Today Indonesia" />
-<meta name="PageTitle" content="Teknologi Terkini Lenovo | Lenovo Tech Today Indonesia" />
+<meta name="pageName" content="Teknologi Terkini Lenovo | Lenovo Microsite" />
+<meta name="PageTitle" content="Teknologi Terkini Lenovo | Lenovo Microsite" />
 <meta name="internalsearchcanonical" content="https://techtoday.lenovo.com/id/in/solutions" />
 <meta name="robots" content="INDEX,FOLLOW" />
 <link rel="icon" href="https://techtoday.lenovo.com/themes/custom/lenovod8/favicon.ico" type="image/vnd.microsoft.icon" />
